--- a/ui_task4.ui
+++ b/ui_task4.ui
@@ -4613,7 +4613,7 @@ border : 2px solid rgb(255, 255, 255); </string>
                     <property name="currentText">
                      <string>Sobel</string>
                     </property>
-                    <property name="placeholderText">
+                    <property name="placeholderText" stdset="0">
                      <string>Select a method</string>
                     </property>
                     <item>
@@ -4930,7 +4930,7 @@ selection-background-color: rgb(4, 79, 70);
                      <property name="currentText">
                       <string>K means </string>
                      </property>
-                     <property name="placeholderText">
+                     <property name="placeholderText" stdset="0">
                       <string>Select A Method</string>
                      </property>
                      <item>
@@ -5058,7 +5058,7 @@ border-radius: 10px;</string>
                      </property>
                      <layout class="QHBoxLayout" name="horizontalLayout_27">
                       <item>
-                       <widget class="QPushButton" name="spectralBtn">
+                       <widget class="QPushButton" name="spectral_thresholding_button">
                         <property name="minimumSize">
                          <size>
                           <width>190</width>
@@ -5081,7 +5081,7 @@ border-radius: 10px;</string>
                        </widget>
                       </item>
                       <item>
-                       <widget class="QPushButton" name="otsuBtn">
+                       <widget class="QPushButton" name="otsu_thresholding_button">
                         <property name="minimumSize">
                          <size>
                           <width>190</width>
