--- a/ui_task4.ui
+++ b/ui_task4.ui
@@ -4918,11 +4918,16 @@ border-radius: 10px;</string>
                       <bool>true</bool>
                      </property>
                      <property name="currentText">
-                      <string>K means </string>
+                      <string>Choose Segmentation Method</string>
                      </property>
                      <property name="placeholderText" stdset="0">
                       <string>Select A Method</string>
                      </property>
+                     <item>
+                      <property name="text">
+                       <string>Choose Segmentation Method</string>
+                      </property>
+                     </item>
                      <item>
                       <property name="text">
                        <string>K means </string>
@@ -5231,6 +5236,15 @@ border-radius: 10px;</string>
                      <layout class="QHBoxLayout" name="horizontalLayout_30">
                       <item>
                        <widget class="QDoubleSpinBox" name="intensity_diff_tolerance_spinbox">
+                        <property name="styleSheet">
+                         <string notr="true">background-color: rgb(37, 42, 64);
+background-color: rgb(6,131,116,255);
+
+color: rgb(255, 255, 255);
+border-radius: 15px;
+box-shadow : 0px 4px 20px rgba(0, 0, 0, 0.6);
+border : 2px solid rgb(255, 255, 255); </string>
+                        </property>
                         <property name="maximum">
                          <double>1.000000000000000</double>
                         </property>
@@ -5251,6 +5265,15 @@ border-radius: 10px;</string>
                       </item>
                       <item>
                        <widget class="QSpinBox" name="regions_num_spinbox">
+                        <property name="styleSheet">
+                         <string notr="true">background-color: rgb(37, 42, 64);
+background-color: rgb(6,131,116,255);
+
+color: rgb(255, 255, 255);
+border-radius: 15px;
+box-shadow : 0px 4px 20px rgba(0, 0, 0, 0.6);
+border : 2px solid rgb(255, 255, 255); </string>
+                        </property>
                         <property name="value">
                          <number>3</number>
                         </property>
@@ -5265,6 +5288,15 @@ border-radius: 10px;</string>
                       </item>
                       <item>
                        <widget class="QDoubleSpinBox" name="seed_tolerance_spinbox">
+                        <property name="styleSheet">
+                         <string notr="true">background-color: rgb(37, 42, 64);
+background-color: rgb(6,131,116,255);
+
+color: rgb(255, 255, 255);
+border-radius: 15px;
+box-shadow : 0px 4px 20px rgba(0, 0, 0, 0.6);
+border : 2px solid rgb(255, 255, 255); </string>
+                        </property>
                         <property name="maximum">
                          <double>1.000000000000000</double>
                         </property>
@@ -5273,6 +5305,41 @@ border-radius: 10px;</string>
                         </property>
                         <property name="value">
                          <double>0.050000000000000</double>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QLabel" name="label_50">
+                        <property name="text">
+                         <string>Number of Clusters</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QDoubleSpinBox" name="num_clusters">
+                        <property name="styleSheet">
+                         <string notr="true">background-color: rgb(37, 42, 64);
+background-color: rgb(6,131,116,255);
+
+color: rgb(255, 255, 255);
+border-radius: 15px;
+box-shadow : 0px 4px 20px rgba(0, 0, 0, 0.6);
+border : 2px solid rgb(255, 255, 255); </string>
+                        </property>
+                        <property name="decimals">
+                         <number>0</number>
+                        </property>
+                        <property name="minimum">
+                         <double>2.000000000000000</double>
+                        </property>
+                        <property name="maximum">
+                         <double>20.000000000000000</double>
+                        </property>
+                        <property name="singleStep">
+                         <double>1.000000000000000</double>
+                        </property>
+                        <property name="value">
+                         <double>2.000000000000000</double>
                         </property>
                        </widget>
                       </item>
