--- a/ui_task4.ui
+++ b/ui_task4.ui
@@ -4961,7 +4961,7 @@ border-radius: 10px;</string>
                       </sizepolicy>
                      </property>
                      <property name="text">
-                      <string>PushButton</string>
+                      <string>Apply</string>
                      </property>
                     </widget>
                    </item>
@@ -5264,7 +5264,7 @@ box-shadow : 0px 4px 20px rgba(0, 0, 0, 0.6);
 border : 2px solid rgb(255, 255, 255); </string>
                         </property>
                         <property name="value">
-                         <number>3</number>
+                         <number>5</number>
                         </property>
                        </widget>
                       </item>
