--- a/ui_task4.ui
+++ b/ui_task4.ui
@@ -4920,7 +4920,10 @@ border-radius: 10px;</string>
                       <bool>true</bool>
                      </property>
                      <property name="currentText">
-                      <string>Choose Segmentation Method</string>
+                      <string/>
+                     </property>
+                     <property name="currentIndex">
+                      <number>-1</number>
                      </property>
                      <property name="placeholderText">
                       <string>Select A Method</string>
