--- a/ui_task4.ui
+++ b/ui_task4.ui
@@ -4935,7 +4935,7 @@ border-radius: 10px;</string>
                      </item>
                      <item>
                       <property name="text">
-                       <string>K means </string>
+                       <string>K Means</string>
                       </property>
                      </item>
                      <item>
@@ -4950,7 +4950,7 @@ border-radius: 10px;</string>
                      </item>
                      <item>
                       <property name="text">
-                       <string>Mean shift</string>
+                       <string>Mean Shift</string>
                       </property>
                      </item>
                     </widget>
@@ -5308,7 +5308,7 @@ border : 2px solid rgb(255, 255, 255); </string>
                        </widget>
                       </item>
                       <item>
-                       <widget class="QDoubleSpinBox" name="num_clusters">
+                       <widget class="QDoubleSpinBox" name="clusters_num_spinbox">
                         <property name="styleSheet">
                          <string notr="true">background-color: rgb(37, 42, 64);
 background-color: rgb(6,131,116,255);
@@ -5332,6 +5332,32 @@ border : 2px solid rgb(255, 255, 255); </string>
                         </property>
                         <property name="value">
                          <double>2.000000000000000</double>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QLabel" name="label_44">
+                        <property name="text">
+                         <string>Iterations</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QSpinBox" name="iterations_num_spinbox">
+                        <property name="alignment">
+                         <set>Qt::AlignCenter</set>
+                        </property>
+                        <property name="minimum">
+                         <number>100</number>
+                        </property>
+                        <property name="maximum">
+                         <number>1000</number>
+                        </property>
+                        <property name="singleStep">
+                         <number>50</number>
+                        </property>
+                        <property name="value">
+                         <number>300</number>
                         </property>
                        </widget>
                       </item>
